--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,3 +20,9 @@ main:
 
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "Social Activities"
+    url: "/#-Social Activities"
+
+  - title: "Contact"
+    url: "/#-Contact"
