--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ main:
     url: "/#-internships"
 
   - title: "Social Activities"
-    url: "/#-social Activities"
+    url: "/#-social-activities"
 
   - title: "Contact"
     url: "/#-contact"
