--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  bilibili         : "https://space.bilibili.com/1864908149?spm_id_from=333.1369.0.0"  # 修改为你的B站主页链接
 
 
 # Reading Files
