Remove English CV Synctex file, update English CV with new photo and section titles, and add Chinese and English backup CV files.

--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,11 @@ exclude:
   - package.json
   - tmp
   - vendor
+  - cv/**
+  - plan/**
+  - .claude/**
+  - CLAUDE.md
+
 keep_files:
   - .git
   - .svn
