--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@ _site/
 push.sh
 .DS_Store
 cv/*.pdf
+*.aux
+*.log
+*.out
+*.toc
+*.lof
+*.lot
+*.bbl
+*.blg
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+*.pdf
+*.gz
